# modern_cpp_bus_demo

./: CMakeLists.txt  core_messages.hpp  messages.h  modern_bus_main.cpp  statistics_messages.hpp
